# Jynx

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  grammar.md  meson.build  type
examples/: asm.jx  binary_expr.jx  block_nested.jx  block_simple.jx  class_constructor.jx  class_simple.jx  example.jx  function.jx  function_complex.jx  function_overload.jx  function_overload_call.jx  function_param.jx  function_param_string.jx  function_simple.jx  function_void.jx  if_else_cond.jx  if_else_neq.jx  if_else_simple.jx  if_else_string.jx  if_else_test.jx  if_else_vardecl.jx  if_elseif_else.jx  return_simple.jx  simple.jx  vardecl_assign.jx  vardecl_assign_literal.jx  vardecl_both.jx  vardecl_lots.jx  vardecl_nested_parenthesis.jx  vardecl_reassign.jx  vardecl_simple.jx  vardecl_string.jx  vardecl_types.jx  vardecl_unary.jx  vardecl_wrong_types.jx  while_complex.jx  while_simple.jx  while_vardecl.jx
include/: array_type.hh  ast.hh  ast_utils.hh  context.hh  data.h  diagnostics.hh  error.hh  gen.hh  lexer.h  lexer.hh  log.hh  macros.h  methodtable.hh  parser.hh  pointer_type.hh  primitive_type.hh  scope.hh  sema.hh  sourcelocation.hh  symbol.hh  token.h  token.hh  token_utils.hh  trie.hh  type.hh  visitor.hh
include/visitor/: nameresolver.hh  symbolcollector.hh  treetransformer.hh  typechecker.hh  visitor.hh
src/: context.cc  gen.cc  lexer.c  lexer.cc  log.cc  main.c  main.cc  parser.cc  primitive_type.cc  scope.cc  sema.cc  token.c  token.cc  visitor.cc
src/visitor/: nameresolver.cc  symbolcollector.cc  symbolcollectorvisitor.cc  treetransformer.cc  typechecker.cc  typecheckervisitor.cc
tests/: test_codegen.cc  test_lexer.c  test_lexer.cc  test_parser.cc  test_sema.cc  test_typechecker.cc  test_utils.hh
